@@ -1,5 +1,6 @@
 CGateInterface 0.2 (released TBC)
 
+* Implement terminate_ramp.
 * Fix NullPointerException when a Group returns a null level.
 * Change API's to rebuild cache rather than always retrieve from the cache.
 * Fix NullPointerException when C-Gate connection not established correctly.
